# RefugioAnimalespp3

./: CMakeLists.txt  README.md  main.cpp
include/Base/: Animal.h  ControlVeterinario.h  Persona.h
include/Core/: Refugio.h
include/Dominio/: Adopcion.h  Cuidador.h  Desparasitacion.h  Gato.h  Perro.h  Vacunacion.h
include/Utilidad/: ContenedorDinamico.h  Enums.h
src/: Adopcion.cpp  Animal.cpp  ControlVeterinario.cpp  Cuidador.cpp  Desparasitacion.cpp  Gato.cpp  Perro.cpp  Persona.cpp  Refugio.cpp  Vacunacion.cpp
